--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
        <p>Resources</p>
        <p>About</p>
     </div>
-    <div class="cta">Get Started</div>
+    <a href="./content.html"><div class="cta">Get Started</div></a>
 
   </nav>  
   <div id="main">
@@ -44,19 +44,19 @@
             <i class="ri-article-line"></i>
                 <h2>PYQ Papers</h2>
                 <p>Previous Year Questions</p>
-            <h2 style="color: skyblue">1000+</h2>
+            <h2 style="color: rgb(49, 147, 245)">1000+</h2>
         </div>
         <div class="card">
             <i class="ri-book-open-line"></i>
             <h2>sample Papers</h2>
               <p>Practice test papers</p>
-              <h2 style="color: skyblue;">500+</h2>
+              <h2 style="color:rgb(49, 147, 245);">500+</h2>
             </div>
         <div class="card">
             <i class="ri-award-line"></i>
            <h2>Syllabus</h2>
              <p>Complete study plans</p>
-             <h2 style="color: skyblue;">50+</h2>
+             <h2 style="color:rgb(49, 147, 245);">50+</h2>
              </div>
     </div>
     <div id="exams">
@@ -128,7 +128,11 @@
         <div id="foot">
             <h2>Start Your Preparation Today</h2>
 <p>Join thousands of aspirants who are achieving their dreams with our free resources</p>
-<div id="last"><div class="cta">browse all exams</div><div class="btn">download resources</div>
+<div id="last">
+
+  <a href="./content.html"><div class="cta">browse all exams</div></a>
+  
+  <div class="btn">download resources</div>
     </div>
 </div>
         </div>
