--- a/index.html
+++ b/index.html
@@ -4,9 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-
-
-
+<link rel="shortcut icon" href="https://i.pinimg.com/1200x/84/0b/6e/840b6e44c955b9e64b9aa5de05afd6af.jpg" type="image/x-icon">
     <title>Exam Prep</title>
     <link rel="stylesheet" href="style.css">
     <link
